syntax = "proto3";
option csharp_namespace = "ITI.Grpc.Client.Protos";

service InventoryServiceP{
	rpc GetProductById(Id) returns(IsExisted);
	rpc AddProduct(Product) returns(Product);
	rpc UpdateProduct(Product) returns(Product);
}

message Id
{
	int32 Id=1;
}

message Product
{
	int32 Id=1;
	string name=2;
	double price =3;
	string Description=4;
}

message IsExisted
{
	bool IsExisted=1;
}


